--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,32 @@
 # Site settings
-site: Ephesus
-title: Ephesus - Minimalist Jekyll Theme
-keywords: ephesus, blog
+site: Michelson Lab
+title: Michelson Lab
+keywords: critical care, sepsis, informatics, machine learning artificial intelligence
 description: >-
-  Ephesus - Minimalist Jekyll Theme
+  Michelson Lab
 lang: en-US
-timezone:  Europe/Istanbul
-repo: https://github.com/onepase/Ephesus # site repo [optional]
+timezone:  America/Chicago
+repo: https://github.com/andrewmichelson # site repo [optional]
 google_verify:      XXX # Put your Google Verification here
 google_analytics:   UA-XXXXXXXX-00 # Put your Google Analytics code
 discus-identifier:  XXX
 
 # Author settings
 author:
-  name: Hakan Torun
-  bio: Computer Engineer @pardinus <br> Founder @zaqa <br> Open Source /#linux
-  picture: assets/images/profile.jpg 
-  github: onepase # github username
-  twitter: onepase # twitter username
-  facebook: onepase # facebook username
-  instagram: onepase # instagram username
-  youtube: https://www.youtube.com/channel/UCMmAto-wxBootXN91AzBiDg # youtube username
-  linkedin: hakantorun # linkedin username
-  email: your-email@email.com # email adress
+  name: Andrew P. Michelson, MD
+  bio: Assistant Professor | Director, Critical Care Informatics Research  | Faculty Affiliate, Institute for Informatics | Intensivist | Physician Scientist
+  picture: assets/images/apm.jpg 
+  github: andrewmichelson # github username
+  twitter: apmichelson # twitter username
+  facebook:  # facebook username
+  instagram:  # instagram username
+  youtube:  # youtube username
+  linkedin:  # linkedin username
+  email: amichels@wustl.edu # email adress
 
 
 # URL settings
-url: "http://127.0.0.1:4000" # Domain Name of host. [username].github.io for github pages
+url: "http:andrewmichelson.github.io" # Domain Name of host. [username].github.io for github pages
 permalink: pretty
 
 markdown: kramdown
@@ -48,7 +48,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-relative-links
-paginate: 20
+paginate: 5
 paginate_path: "/page/:num"
 
 collections:
