--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ discus-identifier:  XXX
 author:
   name: Andrew P. Michelson, MD
   bio: Assistant Professor | Director, Critical Care Informatics Research  | Faculty Affiliate, Institute for Informatics | Intensivist | Physician Scientist
-  picture: assets/images/apm.jpg 
+  picture: assets/images/apm.png 
   github: andrewmichelson # github username
   twitter: apmichelson # twitter username
   facebook:  # facebook username
