--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ collections:
     output: true
     permalink: /:name
   posts:
-    output: true
+    output: false
     permalink: /:slug
   
 defaults:
