--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
   bio: Assistant Professor | Director, Critical Care Informatics Research  | Faculty Affiliate, Institute for Informatics | Intensivist | Physician Scientist
   picture: assets/images/apm.png 
   github: andrewmichelson # github username
-  twitter: apmichelson # twitter username
+  twitter: andrewpmichelson # twitter username
   facebook:  # facebook username
   instagram:  # instagram username
   youtube:  # youtube username
