--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-site: Michelson Lab
-title: Michelson Lab
+site: Andrew P. Michelson, MD
+title: Andrew P. Michelson, MD
 keywords: critical care, sepsis, informatics, machine learning artificial intelligence
 description: >-
   Michelson Lab
