--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ discus-identifier:  XXX
 # Author settings
 author:
   name: Andrew P. Michelson, MD
-  bio: Assistant Professor | Director, Critical Care Informatics Research  | Faculty Affiliate, Institute for Informatics | Intensivist | Physician Scientist
+  bio: Assistant Professor | Director, Critical Care Informatics Research  | Faculty Affiliate, Institute for Informatics | Intensivist | Physician Scientist | Clinical Informaticist
   picture: assets/images/apm.png 
   github: andrewmichelson # github username
   twitter: andrewpmichelson # twitter username
